# aisd

./: .gitignore
M1/: 3_2.cpp  4_3.cpp  5_2.cpp  5_2_cool_oop_example.cpp  6_4.cpp  7_3.cpp  7_3_bits.cpp  CMakeLists.txt  notes.txt  tmp
M1/1_4/: binary tree joseph  joseph  main.cpp
M1/2_1/: main.cpp
M2/: 1_2.cpp  2_1.cpp  3_1.cpp  4_2.cpp  5.cpp  CMakeLists.txt  note.txt
M3/: 2.cpp  3.cpp
M3/task1/: CArcGraph.cpp  CArcGraph.h  CListGraph.cpp  CListGraph.h  CMatrixGraph.cpp  CMatrixGraph.h  CSetGraph.cpp  CSetGraph.h  IGraph.h  main.cpp
