cmake_minimum_required(VERSION 3.13)
project(1)

set(CMAKE_CXX_STANDARD 14)

add_executable(1_4 ./1_4/main.cpp 3_2.cpp)
add_executable(2_1 ./2_1/main.cpp)
add_executable(3_2 3_2.cpp)
add_executable(4_3 4_3.cpp)
add_executable(5_2 5_2.cpp)
add_executable(6_4 6_4.cpp)
add_executable(7_3 7_3.cpp)
add_executable(7_3_bits 7_3_bits.cpp)
add_executable(5_2_cool_oop_example 5_2_cool_oop_example.cpp)